<resources>
    <string name="app_name">Afterglow</string>
    <string name="effects">Эффекты</string>
    <string name="rotating">Поворот</string>
    <string name="scaling">Масштаб</string>
    <string name="retouch">Ретушь</string>
    <string name="segmentation">Сегмен-тация</string>
    <string name="filtration">Фильт-рация</string>
    <string name="undo">Сброс</string>
    <string name="save">Сохранить</string>
    <string name="nameEffect1">Неоновый розовый</string>
    <string name="nameEffect2">Розовый</string>
    <string name="nameEffect3">Черно-белый 1</string>
    <string name="nameEffect4">Черно-белый 2</string>
    <string name="nameEffect5">Негатив</string>
    <string name="nameEffect6">Сепия</string>

</resources>
